tests/fixtures/invalid/pow_str_none_list.py
# Cannot call pow() with Str, None, List[int]
x = pow("hello", None, [1, 2, 3])
